--- a/frontend/src/styles/scss/common.scss
+++ b/frontend/src/styles/scss/common.scss
@@ -1,3 +1,4 @@
+// navbar
 @use "sass:color";
 $navbar-color: white;
 $inactive: black;
@@ -14,6 +15,12 @@ $hover-bgc: rgb(194, 194, 194);
   background-color: #{$navbar-color};
   display: flex;
 
+  .jc-end {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
   @mixin btn($btn-color) {
     font-size: 20px;
     padding-left: 5px;
@@ -25,6 +32,8 @@ $hover-bgc: rgb(194, 194, 194);
     align-items: center;
     border-radius: 5px;
     color: $btn-color;
+    font-weight: 700;
+    transition: color 300ms ease, background-color 300ms ease;
   }
 
   .btn-inactive {
@@ -38,4 +47,11 @@ $hover-bgc: rgb(194, 194, 194);
   .btn-active {
     @include btn(#{$active});
   }
+
+  .btn-title {
+    @include btn(#{$inactive});
+    font-style: italic;
+  }
 }
+
+// TBD
