--- a/frontend/src/styles/scss/LoginPage.scss
+++ b/frontend/src/styles/scss/LoginPage.scss
@@ -11,6 +11,8 @@ $tab-bgc-hover: rgba(174, 106, 234, 1);
 $tab-bgc-selected: rgba(175, 106, 234, 0.75);
 $height-input-group: 440px;
 $fade-time: 300;
+$before: rgba(255, 0, 0, 50%);
+$after: rgba(0, 0, 255, 50%);
 
 .loginPage-form {
   box-sizing: border-box;
@@ -61,21 +63,71 @@ $fade-time: 300;
     width: 100%;
     height: #{$height-input-group};
 
-    .input-item {
-      height: 50px;
-      border: 2px solid #{$shadow};
-      font-size: 25px;
-      outline: none;
+    .input-text { // 추후 수정
+      height: 15px;
 
-      &:focus {
-        border: 2px solid #{$tab-bgc-hover};
+      &-green {
+        @extend .input-text;
+        color: green;
       }
 
-      &:hover:not(:focus) {
-        border: 2px solid #{$tab-bgc-selected};
+      &-red {
+        @extend .input-text;
+        color: red;
+      }
+    }
+
+    .input-wrapper {
+      display: flex;
+      flex-direction: row;
+
+      .input-item {
+        height: 50px;
+        border: 2px solid #{$shadow};
+        font-size: 25px;
+        outline: none;
+
+        &:focus {
+          border: 2px solid #{$tab-bgc-hover};
+        }
+
+        &:hover:not(:focus) {
+          border: 2px solid #{$tab-bgc-selected};
+        }
+      }
+
+      .input-item-btn-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+
+        @mixin input-item-btn($action-color) {
+          height: 100%;
+          width: 70%;
+          font-size: 18px;
+          border-radius: 5px;
+          transition: filter 300ms ease-in-out;
+          cursor: pointer;
+          background-color: $action-color;
+          
+          &:hover {
+            filter: brightness(80%);
+          }
+        }
+
+        .input-item-btn {
+          &-before {
+            @include input-item-btn($action-color: #{$before});
+          }
+          &-after {
+            @include input-item-btn($action-color: #{$after});
+          }
+        }
       }
     }
   }
+
   .fade {
     &-appear {
       opacity: 0;
