--- a/frontend/src/styles/scss/LoginPage.scss
+++ b/frontend/src/styles/scss/LoginPage.scss
@@ -64,6 +64,7 @@ $after-hover: rgba(0, 255, 0, 70%);
     justify-content: space-around;
     width: 100%;
     height: #{$height-input-group};
+    margin-top: 30px;
 
     .input-text {
       // 추후 수정
@@ -108,6 +109,7 @@ $after-hover: rgba(0, 255, 0, 70%);
           width: 70%;
           font-size: 18px;
           border-radius: 5px;
+          border: none;
           transition: background-color 300ms ease-in-out;
           cursor: pointer;
           background-color: $action-color;
