feat : 회원가입 로직 중간 과정

--- a/frontend/src/styles/scss/LoginPage.scss
+++ b/frontend/src/styles/scss/LoginPage.scss
@@ -116,6 +116,10 @@ $after-hover: rgba(0, 255, 0, 70%);
         }
 
         .input-item-btn {
+          &-before-ignore {
+            @include input-item-btn($action-color: #{$before});
+            cursor: not-allowed;
+          }
           &-before {
             @include input-item-btn($action-color: #{$before});
             &:hover {
