--- a/frontend/src/styles/scss/PartPage.scss
+++ b/frontend/src/styles/scss/PartPage.scss
@@ -100,14 +100,18 @@ top: 50%;
 left: 4em;
 transform: translateY(-50%);
 font-style: normal;
+color: black;
 }
 
 .s-sidebar__nav-link:hover {
 // background: rgb(194, 194, 194);
 background-color: $lighterColor;
-color: rgb(92, 92, 249);
 transition: color 300ms ease-in-out, background-color 300ms ease-in-out, font-size 300ms;
 font-size: 18px;
+border: solid black 1px;
+    & em {
+        color: rgb(92, 92, 249);
+    }
 }
 
 .s-sidebar__nav-link > i {
@@ -176,4 +180,409 @@ transform: translate(-50%, -50%);
 
 .part-filter-box {
     border: solid black 1px;
+    margin-bottom: 30px;
+}
+
+
+// YourComponent.scss
+
+.checkbox-wrapper-8 {
+    .tgl {
+      display: none;
+    }
+    
+    .tgl,
+    .tgl:after,
+    .tgl:before,
+    .tgl *,
+    .tgl *:after,
+    .tgl *:before,
+    .tgl + .tgl-btn {
+      box-sizing: border-box;
+    }
+  
+    .tgl::-moz-selection,
+    .tgl:after::-moz-selection,
+    .tgl:before::-moz-selection,
+    .tgl *::-moz-selection,
+    .tgl *:after::-moz-selection,
+    .tgl *:before::-moz-selection,
+    .tgl + .tgl-btn::-moz-selection,
+    .tgl::selection,
+    .tgl:after::selection,
+    .tgl:before::selection,
+    .tgl *::selection,
+    .tgl *:after::selection,
+    .tgl *:before::selection,
+    .tgl + .tgl-btn::selection {
+      background: none;
+    }
+  
+    .tgl + .tgl-btn {
+      outline: 0;
+      display: block;
+      width: 4em;
+      height: 2em;
+      position: relative;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+  
+    .tgl + .tgl-btn:after,
+    .tgl + .tgl-btn:before {
+      position: relative;
+      display: block;
+      content: "";
+      width: 50%;
+      height: 100%;
+    }
+  
+    .tgl + .tgl-btn:after {
+      left: 0;
+    }
+  
+    .tgl + .tgl-btn:before {
+      display: none;
+    }
+  
+    .tgl:checked + .tgl-btn:after {
+      left: 50%;
+    }
+  
+    .tgl-skewed + .tgl-btn {
+      overflow: hidden;
+    //   transform: skew(-5deg);
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      transition: all 0.2s ease;
+      font-family: sans-serif;
+      background: white;
+      border-radius: 10px;
+      &:hover {
+        border: solid black 1px;
+    }
+    }
+
+  
+    .tgl-skewed + .tgl-btn:after,
+    .tgl-skewed + .tgl-btn:before {
+    //   transform: skew(5deg);
+      display: inline-block;
+      transition: all 0.2s ease;
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      line-height: 2em;
+      font-weight: bold;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    }
+    .tgl-skewed + .tgl-btn:after {
+        color: white;
+    }
+
+    .tgl-skewed + .tgl-btn:before {
+        color: rgb(19, 8, 35);
+    }
+  
+    .tgl-skewed + .tgl-btn:after {
+      left: 100%;
+      content: attr(data-tg-on);
+    }
+  
+    .tgl-skewed + .tgl-btn:before {
+      left: 0;
+      content: attr(data-tg-off);
+    }
+  
+    .tgl-skewed + .tgl-btn:active {
+      background: #888;
+    }
+  
+    .tgl-skewed + .tgl-btn:active:before {
+      left: -10%;
+    }
+  
+    .tgl-skewed:checked + .tgl-btn {
+      background: #86d993;
+    }
+  
+    .tgl-skewed:checked + .tgl-btn:before {
+      left: -100%;
+    }
+  
+    .tgl-skewed:checked + .tgl-btn:after {
+      left: 0;
+    }
+  
+    .tgl-skewed:checked + .tgl-btn:active:after {
+      left: 10%;
+    }
+  }
+  
+  
+  
+.part-filter-attribute {
+    font-family: sans-serif;
+    font-size: 1em;
+
+}
+
+.part-filter-box {
+    border:solid black 1px; 
+    width: 1000px;
+}
+
+/* PropertyCard.scss */
+
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap');
+
+* {
+  margin: 0px;
+  padding: 0;
+}
+
+
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .post {
+    width: 350px;
+    height: 500px;
+    display: flex;
+     overflow: hidden;
+    flex-direction: column;
+    position: relative;
+    border: solid black 1px;
+
+    &:hover {
+      .header_post {
+        margin-top: -20px;
+      }
+
+      .body_post {
+        height: 50%;
+      }
+       
+       img {
+          transform: translatey(-10px) translatex(-5px) scale(1.05)
+       }
+    }
+
+    .header_post {
+      width: 100%;
+      height: 40%;
+      background: #ddd;
+      position: absolute;
+      top: 0;
+      -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -moz-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -ms-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -o-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+
+      img {
+        max-width: 100%;
+        height: auto;
+         transition: ease-in-out 600ms;
+      }
+    }
+
+    .body_post {
+      width: 100%;
+      height: 60%;
+      background: #fff;
+      position: absolute;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -moz-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -ms-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -o-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      cursor: pointer;
+
+
+      .post_content {
+        width: 80%;
+        height: 80%;
+        background: #fff;
+        position: relative;
+
+        h1 {
+          font-size: 20px;
+          font-weight: bold;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: normal;
+        }
+
+        .container_infos {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          position: absolute;
+          bottom: 0;
+          border-top: 1px solid rgba(0, 0, 0, .2);
+          padding-top: 25px;
+
+          .postedBy {
+            display: flex;
+            flex-direction: column;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-size: 12px;
+
+            span {
+              font-size: 12px;
+              text-transform: uppercase;
+              opacity: 0.5;
+              letter-spacing: 1px;
+              font-weight: bold;
+            }
+          }
+
+          .container_tags {
+            display: flex;
+            flex-direction: column;
+
+            span {
+              font-size: 12px;
+              text-transform: uppercase;
+              opacity: 0.5;
+              letter-spacing: 1px;
+              font-weight: bold;
+            }
+
+            .tags {
+              ul {
+                display: flex;
+                li {
+                  font-size: 12px;
+                  letter-spacing: 2px;
+                  list-style: none;
+                  margin-left: 8px;
+                  text-transform: uppercase;
+                  position: relative;
+                  z-index: 1;
+                  display: flex;
+                  justify-content: center;
+                  cursor: pointer;
+
+                  &:first-child {
+                    margin-left: 0px;
+                  }
+
+                  &:before {
+                    content: '';
+                    text-align: center;
+                    width: 100%;
+                    height: 5px;
+                    background: #FC6042;
+                    opacity: 0.5;
+                    position: absolute;
+                    bottom: 0;
+                    z-index: -1;
+                    padding: 0px 1px;
+      -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -moz-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -ms-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -o-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+                  }
+
+                  &:hover:before {
+                    height: 18px;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+footer {
+  width: 350px;
+  height: 80px;
+  background: #17A16F;
+  position: absolute;
+  right: 0;
+  bottom: -80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   animation: top 0.8s forwards;
+   
+  span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    color: #fff;
+    font-family: 'Poppins';
+
+    i {
+      margin-right: 25px;
+      font-size: 22px;
+      color: #fff;
+      animation: icon 2s forwards;
+      opacity: 0;
+    }
+  }
+}
+
+@keyframes top {
+  0% {
+    opacity: 0;
+     bottom: -80px
+  }
+  100% {
+    opacity: 1;
+     bottom: 0px
+
+  }
+}
+
+@keyframes icon {
+  0% {
+    opacity: 0;
+     transform: scale(0.0);
+  }
+   50% {
+      opacity: 1;
+     transform: scale(1.3) rotate(-02deg);
+      
+   }
+  100% {
+    opacity: 1;
+     bottom: 0px;
+  }
+}
+
+  
+
+.part-body {
+    display: flex;
+    flex-direction: column;
+}
+
+.part-card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3개의 컬럼을 생성합니다. */
+    grid-gap: 20px; /* 그리드 아이템 간의 간격을 설정합니다. */
 }
