--- a/frontend/src/styles/scss/common.scss
+++ b/frontend/src/styles/scss/common.scss
@@ -6,6 +6,7 @@ $active: rgb(154, 154, 244);
 $hover: rgb(92, 92, 249);
 $hover-bgc: rgb(194, 194, 194);
 
+// navbar
 .common-navbar {
   position: sticky;
   top: 0;
@@ -51,6 +52,25 @@ $hover-bgc: rgb(194, 194, 194);
   .btn-title {
     @include btn(#{$inactive});
     font-style: italic;
+  }
+}
+
+// loading
+.common-loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: auto;
   }
 }
 
