--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -1,9 +1,8 @@
 .recommend {
-  
   .top {
     width: 100vw;
     height: 150px;
-    background-color: red;
+    border: 1px dashed black;
   }
 
   .bottom {
@@ -14,13 +13,23 @@
     .left {
       width: 80%;
       height: 100%;
-      background-color: blue;
+      border: 1px dashed black;
     }
 
     .right {
       width: 30%;
       height: 100%;
-      background-color: green;
+      border: 1px dashed black;
+
+      .tab-group {
+        width: 100%;
+        height: 100%;
+
+        .tab-item {
+          width: 100%;
+          height: 20%;
+        }
+      }
     }
   }
 }
