--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -24,6 +24,11 @@
       .tab-group {
         width: 100%;
         height: 100%;
+        
+        .tab-item-before {
+          width: 100%;
+          height: 10%;
+        }
 
         .tab-item {
           width: 100%;
