--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -1,8 +1,15 @@
+$mainColor-weak: rgba(175, 106, 234, 0.5);
+$mainColor-default: rgba(175, 106, 234, 0.75);
+$mainColor-strong: rgba(175, 106, 234, 1);
+
 .recommend {
   .top {
     width: 100vw;
     height: 150px;
     border: 1px dashed black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .bottom {
@@ -24,7 +31,7 @@
       .tab-group {
         width: 100%;
         height: 100%;
-        
+
         .tab-item-before {
           width: 100%;
           height: 10%;
@@ -39,6 +46,57 @@
   }
 
   .progressBar {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    max-width: 800px;
+    width: 100%;
+
+    .steps {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+
+      .circle {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 50px;
+        width: 50px;
+        color: #999;
+        font-size: 22px;
+        font-weight: 500;
+        border-radius: 50%;
+        background: #fff;
+        border: 4px solid #e0e0e0;
+        transition: all 200ms ease;
+        transition-delay: 0s;
+      }
+
+      .circle.active {
+        transition-delay: 100ms;
+        border-color: #{$mainColor-default};
+        color: #{$mainColor-default};
+      }
+
+      .progress-bar {
+        position: absolute;
+        height: 4px;
+        width: 100%;
+        background: #e0e0e0;
+        z-index: -1;
+
+        .indicator {
+          position: absolute;
+          height: 100%;
+          width: 0%; // 이 변수를 통해서 가로바의 길이를 정한다.
+          background: #{$mainColor-weak};
+          transition: all 300ms ease;
+        }
+      }
+    }
   }
 }
