--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -110,11 +110,10 @@
       width: 800px;
       height: 400px;
       padding: 10px;
-      resize:none;
+      resize: none;
       border-radius: 0.2rem;
     }
   }
-
 }
 
 .detail_page {
@@ -122,7 +121,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  hr{
+  hr {
     width: 800px;
     border: 1px solid lightgray;
   }
@@ -133,10 +132,29 @@
     width: 800px;
     height: 20px;
   }
-  .detail_content{
+  .detail_content {
     margin: 10px;
     padding: 10px;
     width: 800px;
     height: 400px;
+  }
+
+  .comment_block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .comment_input {
+      margin: 10px;
+      padding: 10px;
+      width: 700px;
+      height: 80px;
+      resize: none;
+    }
+    .comment_input_button{
+      width: 90px;
+      height: 90px;
+      padding: 10px;
+    }
   }
 }
