feat : 추천 페이지 요약

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -21,6 +21,7 @@ $mainColor-strong: rgba(175, 106, 234, 1);
       width: 80%;
       height: 100%;
       border: 1px dashed black;
+      padding: 5px;
     }
 
     .right {
