--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -4,29 +4,44 @@ $mainColor-strong: rgba(175, 106, 234, 1);
 
 .recommend {
   .top {
+    box-sizing: border-box;
     width: 100vw;
     height: 150px;
-    border: 1px dashed black;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
   .bottom {
+    box-sizing: border-box;
     width: 100vw;
     height: 550px;
     display: flex;
 
     .left {
+      box-sizing: border-box;
       width: 80%;
       height: 100%;
-      border: 1px dashed black;
       padding: 5px;
+
+      .wrapper {
+        box-sizing: border-box;
+        border-radius: 5px;
+        height: 100%;
+        width: 100%;
+        border: 3.5px solid #{$mainColor-default};
+
+        .process {
+          margin: 5px;
+        }
+      }
     }
 
     .right {
+      box-sizing: border-box;
       width: 30%;
       height: 100%;
+      padding: 5px;
       border: 1px dashed black;
 
       .tab-group {
