--- a/frontend/src/styles/scss/comment.scss
+++ b/frontend/src/styles/scss/comment.scss
@@ -2,18 +2,27 @@
   display: flex;
   flex-direction: column;
   border-bottom: 2px solid lightgray;
-
-  .comment_user{
-    font-weight: 700;
+  .comment_header {
     display: flex;
-    align-items: center;
-    .user_img {
-      margin: 4px;
-      width: 20px;
-      height: 20px;
-      border: 1px solid #000;
-      background-color: lightgray;
-      border-radius: 50%;
+    justify-content: space-between;
+    .comment_user {
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+      .user_img {
+        margin: 4px;
+        width: 20px;
+        height: 20px;
+        border: 1px solid #000;
+        background-color: lightgray;
+        border-radius: 50%;
+      }
+    }
+    .buttons > button {
+      background: none;
+      border: none;
+      margin: 5px;
+      cursor: crosshair;
     }
   }
   .comment_content {
@@ -21,8 +30,8 @@
     flex-direction: column;
     font-size: 1.2rem;
     margin: 6px;
-    
-    .date{
+
+    .date {
       font-size: 0.4rem;
     }
   }
