feat: 추천페이지 연결 정리

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -33,6 +33,11 @@ $mainColor-strong: rgba(175, 106, 234, 1);
 
         .process {
           margin: 5px;
+
+          .sub {
+            height: 100%;
+            width: 100%;
+          }
         }
       }
     }
