feat : 추천 페이지 연결 중간

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -37,6 +37,20 @@ $mainColor-strong: rgba(175, 106, 234, 1);
           .sub {
             height: 100%;
             width: 100%;
+
+            &.proc1 {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              .center {
+                display: flex;
+                justify-content: center;
+              }
+            }
+
+            &.proc2 {
+            }
           }
         }
       }
