--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -77,11 +77,66 @@ $proc1-fs: 2.5rem;
 
           // proc1_2
           .proc1_2 {
-            .plusBtn {
-              height: 80px;
-              aspect-ratio: 1/1;
-              border-radius: 10%;
-              border: 5px dashed #{$mainColor-default};
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .card-container {
+              height: 100%;
+              width: 100%;
+              display: flex;
+              justify-content: space-evenly;
+              align-items: center;
+              flex-wrap: wrap;
+
+              .card {
+                width: 200px;
+                height: 200px;
+                perspective: 1000px;
+                position: relative;
+                margin: 10px 5px;
+                cursor: pointer;
+
+                &:hover .card-front {
+
+                  transform: rotateY(180deg);
+                  opacity: 0;
+                }
+
+                &:hover .card-back {
+                  transform: rotateY(0deg);
+                  opacity: 1;
+                }
+
+                .card-front,
+                .card-back {
+                  width: 100%;
+                  height: 100%;
+                  position: absolute;
+                  font-size: 18px;
+                  transition: all 500ms ease-in-out;
+                  backface-visibility: hidden;
+                  border-radius: 5px;
+                }
+
+                .card-front {
+                  border: 1px solid gray;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  background-size: cover;
+                  background-repeat: no-repeat;
+                  background-position: center;
+                }
+
+                .card-back {
+                  background-color: #{$mainColor-default};
+                  transform: rotateY(180deg);
+                  opacity: 0;
+                }
+              }
             }
           }
         }
