feat: 게시글 별 detail 페이지 접근(더미)

--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -71,16 +71,18 @@
   }
   .board_number {
     bottom: 10px;
-    button {
+    .page_button {
       margin: 3px;
+      padding: 4px;
       width: 30px;
       height: 30px;
       background: #fff;
-      border-radius: 1rem;
+      border-radius: 50%;
       border: 1px solid gray;
       &:hover {
         opacity: 90%;
         background-color: #eee;
+        cursor: pointer;
       }
     }
   }
