--- a/frontend/src/styles/scss/comment.scss
+++ b/frontend/src/styles/scss/comment.scss
@@ -22,7 +22,7 @@
       background: none;
       border: none;
       margin: 5px;
-      cursor: crosshair;
+      cursor: pointer;
     }
   }
   .comment_content {
