--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -296,6 +296,13 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 margin: 5px 5px 0 5px;
                 cursor: pointer;
                 transition: all 200ms ease-in-out;
+
+                &:hover {
+                  filter: brightness(80%);
+                  ~ .item-bot {
+                    background-color: #{$mainColor-weak};
+                  } 
+                }
               }
 
               &-bot {
@@ -312,6 +319,9 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           }
 
           .proc3 {
+            height: 100%;
+            width: 100%;
+            
           }
 
           .proc4 {
