test : CI / CD 확인

--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -490,7 +490,9 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           }
 
           .procEnd {
-            
+            .test {
+              color: "red";
+            }
           }
         }
       }
