--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -11,10 +11,9 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
     box-sizing: border-box;
     width: 100vw;
     height: 150px;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .bottom {
@@ -444,7 +443,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             .proc5-top {
               width: 100%;
               height: 60%;
-              
+
               .text {
                 font-size: 2rem;
                 display: flex;
@@ -454,7 +453,6 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               .select-wrapper {
                 width: 60%;
                 margin: 30px auto;
-                
               }
             }
             .proc5-bot {
@@ -466,7 +464,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 width: 100%;
                 display: flex;
                 justify-content: flex-end;
-  
+
                 .submitBtn {
                   height: 60px;
                   width: 90px;
@@ -480,7 +478,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   cursor: pointer;
                   transition: all 200ms ease-in-out;
                   margin-right: 40px;
-  
+
                   &:hover {
                     background-color: white;
                     border: 2px solid #{$mainColor-default};
