fix: boardPage.scss end->felx-end로 수정

--- a/frontend/src/styles/scss/boardPage.scss
+++ b/frontend/src/styles/scss/boardPage.scss
@@ -87,8 +87,8 @@
         }
         .content-date {
           display: flex;
-          justify-content: end;
-          align-items: end;
+          justify-content: flex-end;
+          align-items: flex-end;
         }
       }
     }
