feat: 게시글 이미지 조회 기능 추가

--- a/frontend/src/styles/scss/carousel.scss
+++ b/frontend/src/styles/scss/carousel.scss
@@ -43,6 +43,9 @@
       li {
         flex: none;
         object-fit: contain;
+        img {
+          max-width: 100px;
+        }
       }
     }
   }
