--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -137,6 +137,11 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                   background-color: #{$mainColor-default};
                   transform: rotateY(180deg);
                   opacity: 0;
+
+                  .detail {
+                    height: 100%;
+                    width: 100%;
+                  }
                 }
               }
             }
@@ -146,6 +151,21 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
           .partSelect {
             height: 100%;
             width: 100%;
+
+            .back-wrapper {
+              height: 25px;
+
+              .back {
+                cursor: pointer;
+                transition: all 200ms ease-in-out;
+
+                &:hover {
+                  color: red;
+                  font-size: 22.5px;
+                  font-weight: bolder;
+                }
+              }
+            }
 
             .search-wrapper {
               display: flex;
@@ -192,16 +212,17 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 flex-wrap: wrap;
 
                 .item {
+                  box-sizing: border-box;
                   height: 200px;
                   width: 200px;
                   margin: 5px 5px;
                   cursor: pointer;
                   transition: all 200ms ease-in-out;
-                  border: 1px solid white;
+                  border: 2px solid white;
                   border-radius: 5px;
 
                   &:hover {
-                    border: 1px solid black;
+                    border: 2px solid gray;
                   }
 
                   .partImg {
@@ -224,6 +245,15 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                  }
+                }
+
+                .item-selected {
+                  @extend .item;
+                  border: 2px solid rgba(0, 128, 0, 0.5);
+
+                  &:hover {
+                    border: 2px solid rgba(255, 0, 0, 0.5);
                   }
                 }
               }
@@ -324,6 +354,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             .item-hidden {
               height: 210px;
               width: 280px;
+              margin: 5px;
               display: hidden;
             }
           }
@@ -378,6 +409,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             .item-hidden {
               height: 210px;
               width: 280px;
+              margin: 5px;
               display: hidden;
             }
           }
@@ -462,12 +494,16 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
 
             .proc5-top {
               width: 100%;
-              height: 60%;
+              height: 40%;
+              display: flex;
+              justify-content: center;
+              align-items: flex-end;
 
               .text {
-                font-size: 2rem;
+                font-size: 2.5rem;
                 display: flex;
                 justify-content: center;
+                margin-bottom: 2rem;
               }
 
               .select-wrapper {
@@ -476,8 +512,14 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               }
             }
             .proc5-bot {
-              width: 100%;
+              width: 60%;
               height: 40%;
+              margin: 0 20%;
+            }
+
+            .footer {
+              width: 100%;
+              height: 20%;
 
               .submitBtn-wrapper {
                 height: 20%;
