--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -317,6 +317,10 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
 
             .item {
+              transition: all 200ms ease-in-out;
+              &:hover {
+                background-color: rgba(128, 128, 128, 0.25);
+              }
               &-top {
                 height: 150px;
                 width: 280px;
@@ -326,13 +330,6 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 margin: 5px 5px 0 5px;
                 transition: all 200ms ease-in-out;
                 cursor: pointer;
-
-                &:hover {
-                  filter: brightness(80%);
-                  ~ .item-bot {
-                    background-color: #{$mainColor-weak};
-                  }
-                }
               }
 
               &-bot {
@@ -344,10 +341,15 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 margin: 0 5px 5px 5px;
                 cursor: pointer;
                 transition: all 200ms ease-in-out;
+              }
+            }
 
-                &:hover {
-                  background-color: #{$mainColor-weak};
-                }
+            .item-active {
+              @extend .item;
+              background-color: rgba(0, 255, 0, 0.25);
+
+              &:hover {
+                background-color: rgba(255, 0, 0, 0.25);
               }
             }
 
