--- a/frontend/src/styles/scss/RecommendPage.scss
+++ b/frontend/src/styles/scss/RecommendPage.scss
@@ -158,6 +158,7 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
               .back {
                 cursor: pointer;
                 transition: all 200ms ease-in-out;
+                display: inline-block;
 
                 &:hover {
                   color: red;
@@ -374,6 +375,10 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
             }
 
             .item {
+              transition: all 200ms ease-in-out;
+              &:hover {
+                background-color: rgba(128, 128, 128, 0.25);
+              }
               &-top {
                 height: 150px;
                 width: 280px;
@@ -381,15 +386,8 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 background-repeat: no-repeat;
                 background-position: center;
                 margin: 5px 5px 0 5px;
-                cursor: pointer;
                 transition: all 200ms ease-in-out;
-
-                &:hover {
-                  filter: brightness(80%);
-                  ~ .item-bot {
-                    background-color: #{$mainColor-weak};
-                  }
-                }
+                cursor: pointer;
               }
 
               &-bot {
@@ -401,10 +399,15 @@ $proc3-btn-hover: rgba(174, 171, 171, 0.75);
                 margin: 0 5px 5px 5px;
                 cursor: pointer;
                 transition: all 200ms ease-in-out;
+              }
+            }
 
-                &:hover {
-                  background-color: #{$mainColor-weak};
-                }
+            .item-active {
+              @extend .item;
+              background-color: rgba(0, 255, 0, 0.25);
+
+              &:hover {
+                background-color: rgba(255, 0, 0, 0.25);
               }
             }
 
